[gd_scene load_steps=13 format=3 uid="uid://kgw6204gvghh"]

[ext_resource type="Script" path="res://Scenes/Characters/Enemy/enemy.gd" id="1_yx8dw"]
[ext_resource type="Resource" uid="uid://twbufay3ggj" path="res://Resources/Stats/stats_enemy.tres" id="2_hjpgi"]
[ext_resource type="Texture2D" uid="uid://dhe5iabrivb8s" path="res://Assets/placeholder_x64.png" id="3_dpt5k"]
[ext_resource type="Resource" uid="uid://criqxlqt58rhr" path="res://Resources/Movement/movement_enemy.tres" id="3_fpwuo"]
[ext_resource type="PackedScene" uid="uid://cbvy0qnf2irsy" path="res://Scenes/Areas/SoftCollision/soft_collision.tscn" id="6_8yv6a"]
[ext_resource type="PackedScene" uid="uid://caokct5q8mgju" path="res://Scenes/Areas/Hurtbox/hurtbox.tscn" id="6_sba0g"]
[ext_resource type="PackedScene" uid="uid://t8vufc42wkb8" path="res://Scenes/Weapons/axe.tscn" id="7_gjqe3"]
[ext_resource type="Script" path="res://Resources/Weapons/weapon_resource.gd" id="8_f5m5o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfyh6"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgxo1"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_av7dl"]
size = Vector2(64, 64)

[sub_resource type="Resource" id="Resource_iwvyk"]
resource_local_to_scene = true
script = ExtResource("8_f5m5o")
_name = "Axe"
_damage = 7
_knockback = 400

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 512
script = ExtResource("1_yx8dw")
_stats = ExtResource("2_hjpgi")
_movement = ExtResource("3_fpwuo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_dpt5k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_dfyh6")

[node name="SoftCollision" parent="." instance=ExtResource("6_8yv6a")]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("RectangleShape2D_dgxo1")

[node name="Hurtbox" parent="." instance=ExtResource("6_sba0g")]
visible = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("RectangleShape2D_av7dl")

[node name="PlayerDetector" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="PlayerDetector"]
target_position = Vector2(64, 0)

[node name="RayCast2D2" type="RayCast2D" parent="PlayerDetector"]
target_position = Vector2(64, -25)

[node name="RayCast2D3" type="RayCast2D" parent="PlayerDetector"]
target_position = Vector2(64, 25)

[node name="MeleeWeapon" parent="." instance=ExtResource("7_gjqe3")]
position = Vector2(65, 2)
_resource = SubResource("Resource_iwvyk")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="SoftCollision"]
[editable path="Hurtbox"]
